# vewutils

./: .buildinfo  .gitignore  LICENSE  README.md  api.html  contributing.html  environment.yml  examples.html  genindex.html  getting_started.html  index.html  install.sh  install_conda.sh  introduction.html  objects.inv  overview.html  py-modindex.html  pyproject.toml  references.html  searchindex.js  usage_guides.html
.github/workflows/: docs.yml
_modules/: index.html
_modules/adcircutils/channelpaving/: DEM2Depth.html  NCFRISCrossSect2Depth.html  NHDArea2Width.html  utils.html
_modules/adcircutils/dem2adcdp/: adcmesh.html  dem2adcdp.html
_modules/adcircutils/mesh/: add_land_boundaries.html  adjust_vew_barrier_heights.html  adjust_vew_channel_elevations.html  mesh_merger.html  mesh_subtractor.html  vew_boundary_manipulator.html
_modules/adcircutils/vewprocessing/: polyline_converter.html  vew_adder.html  vew_scraper.html
_sources/: api.rst.txt  examples.rst.txt  getting_started.rst.txt  index.rst.txt  installation.rst.txt  introduction.rst.txt  overview.rst.txt  references.rst.txt  usage_guides.rst.txt
_sources/api/: channelpaving.rst.txt  classes.rst.txt  data_structures.rst.txt  dem2adcdp.rst.txt  mesh.rst.txt  plot.rst.txt  postprocess.rst.txt  utils.rst.txt
_sources/examples/: advanced.rst.txt
adcircutils/dem2adcdp/: adcmesh.py  dem2adcdp.py
adcircutils/flowline/: DEM2FlowlineDepth.py
adcircutils/hydrologyboundary/: fluxboundaries.py  nwm.py  usgs.py
adcircutils/plot/: get_f63wl_at.py  plot_hydrograph_at_station.py
api/: channelpaving.html  classes.html  data_structures.html  dem2adcdp.html  functions.html  hydrologyboundary.html  mesh.html  modindex.html  modules.html  nodalattribute.html  plot.html  postprocess.html  utils.html  vewprocessing.html
api/_autosummary/: adcircutils.html
docs/source/: api.rst  conf.py  contributing.rst  getting_started.rst  index.rst
examples/: advanced.html  basic.html  gallery.html  tutorials.html
examples/channelmerging/: P00_uncompress_files.sh  example.sh
examples/channelpaving/: P00_uncompress_files.sh  P02_add_channel_mesh_to_bg_mesh.mlx  P99_compress_files.sh  README.md
examples/vewprocessing/: P99_compress_files.sh  example.html  example.ipynb  example.sh
(+112 files in other folders)
