[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "adcircutils"
authors = [
    {name = "Shintaro Bunya", email = "sbunya@gmail.com"}
]
description = "Utility programs for the ADCIRC hydrodynamic model"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas"
]
